--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,12 @@ button:hover {
   margin-bottom: 30px;
 }
 
+.product-image {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+}
+
 .readmore {
   list-style: none;
   margin: 20px 0px;
@@ -195,7 +201,7 @@ button:hover {
   align-items: center;
   justify-content: center;
   opacity: 1;
-  animation: fade 2.5s linear;
+  animation: fade 2s linear;
 }
 
 @keyframes fade {
